Fix info popups causing scroll even when invisible

--- a/index.css
+++ b/index.css
@@ -208,14 +208,13 @@ span[info] {
 	transition: opacity .6s;
 	opacity: 0;
 	position: fixed;
-	visibility: hidden;
+	display: none;
 	margin: .2em 20px;
+	overflow: hidden;
 }
 span[info].inline {
 	font-size: 0;
 	position: static;
-	visibility: visible;
-	display: inline;
 	color: inherit;
 	transition: font-size .6s;
 	margin: 0;
@@ -223,8 +222,8 @@ span[info].inline {
 span[info].visible {
 	opacity: 1;
 	position: static;
-	visibility: visible;
 	display: block;
+	overflow: unset;
 }
 span[info].visible.inline {
 	font-size: .8em;
